sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__x_cycles__tests__snapshots__base_3_sample_5_direct_candidates.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/x_cycles.rs
description: Strategy XCycles executed on grid base_3_sample_5_direct_candidates
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │ 12  │ 1   ║ 123 │     │     ║ 1 3 │     │     ║
    - ║  9  │     │     ║     │  8  │  4  ║     │  6  │  5  ║
    - ║     │ 7   │ 7   ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 1   │     ║ 1 3 │ 1 3 │     ║     │   3 │     ║
    - ║  6  │     │  4  ║     │     │  5  ║  2  │     │  7  ║
    - ║     │  8  │     ║   9 │   9 │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │     │ 1   ║ 12  │     │  2  ║ 1   │     │     ║
    - ║  5  │  3  │     ║   6 │  7  │     ║ 4   │  8  │ 45  ║
    - ║     │     │     ║   9 │     │     ║   9 │     │   9 ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║  23 │   3 │     ║     │  2  │  2  ║
    - ║  7  │  6  │     ║     │     │  1  ║  5  │ 4   │ 4   ║
    - ║     │     │  89 ║  8  │     │     ║     │     │  89 ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │     │     ║  2  │     │  2  ║     │  2  │     ║
    - ║ 4   │  5  │  3  ║   6 │   6 │     ║ 4   │ 4   │  1  ║
    - ║     │     │     ║ 78  │     │ 78  ║  89 │ 7   │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │ 12  │ 1   ║     │     │     ║     │  2  │     ║
    - ║     │     │     ║  4  │  5  │  9  ║  6  │     │  3  ║
    - ║     │  8  │  8  ║     │     │     ║     │ 7   │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║     │     │     ║   3 │     │     ║
    - ║  1  │ 4   │  5  ║     │  2  │  6  ║ 4   │  9  │ 4   ║
    - ║     │ 7   │     ║ 78  │     │     ║  8  │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │     │     ║ 1   │     │     ║   3 │   3 │     ║
    - ║     │     │  2  ║  5  │  4  │     ║     │  5  │  56 ║
    - ║     │ 7 9 │     ║ 789 │     │ 78  ║  8  │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │  2  ║
    - ║  8  │ 4   │   6 ║  5  │  5  │  3  ║  7  │  1  │ 456 ║
    - ║     │   9 │   9 ║   9 │   9 │     ║     │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
  deductions:
    - "r4c6: delete candidate 4, because of: r2c6: candidate 4, r2c8: candidate 4, r3c7: candidate 4, r3c8: candidate 4, r4c6: candidate 4"
    - "r7c8: delete candidate 8, because of: r3c8: candidate 8, r4c5: candidate 8, r4c6: candidate 8, r7c5: candidate 8, r7c8: candidate 8"
  grid_output:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │ 12  │ 1   ║ 123 │     │     ║ 1 3 │     │     ║
    - ║  9  │     │     ║     │  8  │  4  ║     │  6  │  5  ║
    - ║     │ 7   │ 7   ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 1   │     ║ 1 3 │ 1 3 │     ║     │   3 │     ║
    - ║  6  │     │  4  ║     │     │  5  ║  2  │     │  7  ║
    - ║     │  8  │     ║   9 │   9 │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │     │ 1   ║ 12  │     │  2  ║ 1   │     │     ║
    - ║  5  │  3  │     ║   6 │  7  │     ║ 4   │  8  │ 45  ║
    - ║     │     │     ║   9 │     │     ║   9 │     │   9 ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║  23 │   3 │     ║     │  2  │  2  ║
    - ║  7  │  6  │     ║     │     │  1  ║  5  │ 4   │ 4   ║
    - ║     │     │  89 ║  8  │     │     ║     │     │  89 ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │     │     ║  2  │     │  2  ║     │  2  │     ║
    - ║ 4   │  5  │  3  ║   6 │   6 │     ║     │ 4   │  1  ║
    - ║     │     │     ║ 78  │     │ 78  ║  89 │ 7   │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │ 12  │ 1   ║     │     │     ║     │  2  │     ║
    - ║     │     │     ║  4  │  5  │  9  ║  6  │     │  3  ║
    - ║     │  8  │  8  ║     │     │     ║     │ 7   │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │     ║     │     │     ║   3 │     │     ║
    - ║  1  │ 4   │  5  ║     │  2  │  6  ║ 4   │  9  │ 4   ║
    - ║     │ 7   │     ║ 78  │     │     ║  8  │     │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║   3 │     │     ║ 1   │     │     ║   3 │   3 │     ║
    - ║     │     │  2  ║  5  │  4  │     ║     │  5  │  56 ║
    - ║     │ 7 9 │     ║ 789 │     │ 78  ║  8  │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │  2  ║
    - ║  8  │ 4   │   6 ║  5  │  5  │  3  ║  7  │  1  │ 456 ║
    - ║     │   9 │   9 ║   9 │   9 │     ║     │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
---
deductions:
  - reasons:
      - position:
          row: 2
          column: 6
        candidates:
          - 4
      - position:
          row: 2
          column: 8
        candidates:
          - 4
      - position:
          row: 3
          column: 7
        candidates:
          - 4
      - position:
          row: 3
          column: 8
        candidates:
          - 4
      - position:
          row: 4
          column: 6
        candidates:
          - 4
    actions:
      - position:
          row: 4
          column: 6
        deleteCandidates:
          - 4
  - reasons:
      - position:
          row: 3
          column: 8
        candidates:
          - 8
      - position:
          row: 4
          column: 5
        candidates:
          - 8
      - position:
          row: 4
          column: 6
        candidates:
          - 8
      - position:
          row: 7
          column: 5
        candidates:
          - 8
      - position:
          row: 7
          column: 8
        candidates:
          - 8
    actions:
      - position:
          row: 7
          column: 8
        deleteCandidates:
          - 8
