sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__x_cycles__tests__snapshots__base_3_sample_6_direct_candidates.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/x_cycles.rs
description: Strategy XCycles executed on grid base_3_sample_6_direct_candidates
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │ 12  │ 12  ║ 12  │     │ 1   ║     │ 1   │     ║
    - ║  3  │  5  │ 45  ║ 45  │  6  │ 45  ║  7  │ 4   │ 4   ║
    - ║     │   9 │     ║  8  │     │  8  ║     │  89 │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 12  │ 12  ║ 123 │ 1 3 │ 1 3 ║     │ 1 3 │   3 ║
    - ║  8  │   6 │ 4   ║ 4   │     │ 4   ║  5  │ 4 6 │ 4   ║
    - ║     │ 7 9 │ 7   ║ 7   │ 7   │ 7   ║     │   9 │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║ 1   │ 1   │ 1   ║     │ 1 3 │ 1 3 ║ 1   │ 1 3 │     ║
    - ║ 4   │  56 │ 45  ║  9  │     │ 45  ║   6 │ 4 6 │  2  ║
    - ║ 7   │ 7   │ 7   ║     │ 78  │ 78  ║  8  │  8  │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │ 123 ║ 1 3 │ 1 3 │ 1 3 ║ 12  │ 123 │   3 ║
    - ║  6  │  4  │     ║     │     │     ║     │  5  │     ║
    - ║     │     │ 7   ║ 78  │ 789 │ 789 ║  8  │ 78  │ 78  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║ 12  │     │ 123 ║ 1 3 │     │ 1 3 ║ 12  │ 123 │   3 ║
    - ║     │  8  │     ║ 4 6 │  5  │ 4 6 ║   6 │   6 │     ║
    - ║ 7 9 │     │ 7   ║ 7   │     │ 7 9 ║     │ 7   │ 7   ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 1 3 │ 1 3 ║ 1 3 │ 1 3 │     ║     │ 1 3 │     ║
    - ║  5  │     │     ║   6 │     │  2  ║  4  │   6 │  9  ║
    - ║     │ 7   │ 7   ║ 78  │ 78  │     ║     │ 78  │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║ 12  │ 12  │     ║ 1   │     │ 1   ║     │  2  │     ║
    - ║     │     │  6  ║     │  4  │     ║  3  │     │  5  ║
    - ║ 7   │ 7   │     ║ 78  │     │ 789 ║     │ 789 │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │  23 │     ║   3 │   3 │   3 ║  2  │  2  │     ║
    - ║ 4   │  5  │  9  ║  56 │     │  56 ║     │ 4   │  1  ║
    - ║ 7   │ 7   │     ║ 78  │ 78  │ 78  ║  8  │ 78  │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║ 1   │ 1 3 │ 1 3 ║ 1 3 │     │ 1 3 ║     │     │     ║
    - ║ 4   │  5  │ 45  ║  5  │  2  │  5  ║     │ 4   │  6  ║
    - ║ 7   │ 7   │ 78  ║ 78  │     │ 789 ║  89 │ 789 │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
  deductions:
    - "r4c5: delete candidate 9, because of: r3c4: candidate 9, r3c5: candidate 9, r4c5: candidate 9, r6c5: candidate 9, r8c5: candidate 9"
  grid_output:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │ 12  │ 12  ║ 12  │     │ 1   ║     │ 1   │     ║
    - ║  3  │  5  │ 45  ║ 45  │  6  │ 45  ║  7  │ 4   │ 4   ║
    - ║     │   9 │     ║  8  │     │  8  ║     │  89 │  8  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 12  │ 12  ║ 123 │ 1 3 │ 1 3 ║     │ 1 3 │   3 ║
    - ║  8  │   6 │ 4   ║ 4   │     │ 4   ║  5  │ 4 6 │ 4   ║
    - ║     │ 7 9 │ 7   ║ 7   │ 7   │ 7   ║     │   9 │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║ 1   │ 1   │ 1   ║     │ 1 3 │ 1 3 ║ 1   │ 1 3 │     ║
    - ║ 4   │  56 │ 45  ║  9  │     │ 45  ║   6 │ 4 6 │  2  ║
    - ║ 7   │ 7   │ 7   ║     │ 78  │ 78  ║  8  │  8  │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║     │     │ 123 ║ 1 3 │ 1 3 │ 1 3 ║ 12  │ 123 │   3 ║
    - ║  6  │  4  │     ║     │     │     ║     │  5  │     ║
    - ║     │     │ 7   ║ 78  │ 789 │ 789 ║  8  │ 78  │ 78  ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║ 12  │     │ 123 ║ 1 3 │     │ 1 3 ║ 12  │ 123 │   3 ║
    - ║     │  8  │     ║ 4 6 │  5  │ 4 6 ║   6 │   6 │     ║
    - ║ 7 9 │     │ 7   ║ 7   │     │ 7   ║     │ 7   │ 7   ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 1 3 │ 1 3 ║ 1 3 │ 1 3 │     ║     │ 1 3 │     ║
    - ║  5  │     │     ║   6 │     │  2  ║  4  │   6 │  9  ║
    - ║     │ 7   │ 7   ║ 78  │ 78  │     ║     │ 78  │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║ 12  │ 12  │     ║ 1   │     │ 1   ║     │  2  │     ║
    - ║     │     │  6  ║     │  4  │     ║  3  │     │  5  ║
    - ║ 7   │ 7   │     ║ 78  │     │ 789 ║     │ 789 │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │  23 │     ║   3 │   3 │   3 ║  2  │  2  │     ║
    - ║ 4   │  5  │  9  ║  56 │     │  56 ║     │ 4   │  1  ║
    - ║ 7   │ 7   │     ║ 78  │ 78  │ 78  ║  8  │ 78  │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║ 1   │ 1 3 │ 1 3 ║ 1 3 │     │ 1 3 ║     │     │     ║
    - ║ 4   │  5  │ 45  ║  5  │  2  │  5  ║     │ 4   │  6  ║
    - ║ 7   │ 7   │ 78  ║ 78  │     │ 789 ║  89 │ 789 │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
---
deductions:
  - reasons:
      - position:
          row: 3
          column: 4
        candidates:
          - 9
      - position:
          row: 3
          column: 5
        candidates:
          - 9
      - position:
          row: 4
          column: 5
        candidates:
          - 9
      - position:
          row: 6
          column: 5
        candidates:
          - 9
      - position:
          row: 8
          column: 5
        candidates:
          - 9
    actions:
      - position:
          row: 4
          column: 5
        deleteCandidates:
          - 9
